Removed last old io in test code